--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <html>
 
 <head>
-<p>yo yo yo</p>
 
+    <link rel="stylesheet" href="style.css">
 
-
+    <title>Coolio Website</title>
 
 </head>
 
 <body>
 
-
-
-
+    <center><h1>yo yo yo</h1></center>
+    
+    <img src="images/Jonesy1.png" class="center">
 
 </body>
 
