--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
 
+    <link rel="icon" href="images/Clonentheses1.png">
     <link rel="stylesheet" href="style.css">
 
     <title>Coolio Website</title>
@@ -13,7 +14,7 @@
 <body>
 
     <center><h1>yo yo yo</h1></center>
-    
+
     <img src="images/Jonesy1.png" class="center">
 
 </body>
