--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 
     <center><h1>yo yo yo</h1></center>
+    <center><a href= "https://jonahandrews.github.io/page1"><h2>Project 1</h2></a></center>
 
     <img src="images/Jonesy1.png" class="center">
 
