--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
 
-    <center><h1>yo yo yo</h1></center>
+    <center><h1>Jonah Andrews CS190 Website</h1></center>
+    <center><h2>yo yo yo</h2></center>
     <center><a href= "https://jonahandrews.github.io/page1"><h2>Project 1</h2></a></center>
 
     <img src="images/Jonesy1.png" class="center">
