--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
 <body>
 
     <center><h1>Jonah Andrews CS190 Website</h1></center>
-    <center><h2>yo yo yo</h2></center>
-    <center><a href= "https://jonahandrews.github.io/page1"><h2>Project 1</h2></a></center>
 
-    <img src="images/Jonesy1.png" class="center">
+    <section class="assignment">
+        <a href="files/ProblemStatement.pdf"><img src="images/ProblemStatement1.PNG" class="medImg"></a>
+        <section class="ass-details">
+            <a href="files/ProblemStatement.pdf"><h2>Problem Statment: Trail Mix</h2></a>
+            <p>
+                The Strom Thurmond Wellness Center can become super crowded at times, making it difficult for students to exercise feasibly.
+            </p>
+        </section>
+    </section>
 
+    <center><a href= "https://jonahandrews.github.io/page1"><p>secret</p></a></center>
 </body>
 
 </html>
