--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="assignment">
         <a href="files/ProblemStatement.pdf"><img src="images/ProblemStatement1.PNG" class="medImg"></a>
         <section class="ass-details">
-            <a href="files/ProblemStatement.pdf"><h2>Problem Statment: Trail Mix</h2></a>
+            <a href="files/ProblemStatement.pdf"><h2>Problem Statement: Crowded Gym</h2></a>
             <p>
                 The Strom Thurmond Wellness Center can become super crowded at times, making it difficult for students to exercise feasibly.
             </p>
