--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
 <body>
 
-    <center><h1>Jonah Andrews CS190 Website</h1></center>
+    <center><h1 class= "title">Jonah Andrews CS190 Website</h1></center>
 
+    <!-- Problem Statement Assignment-->
     <section class="assignment">
         <a href="files/ProblemStatement.pdf"><img src="images/ProblemStatement1.PNG" class="medImg"></a>
         <section class="ass-details">
@@ -24,6 +25,21 @@
             </p>
         </section>
     </section>
+
+    <!-- Affinity Diagram Assignmnet-->
+    <section class="assignment">
+        <a href="files/AffinityDiagram.pdf"><img src="images/AffinityDiagram1.PNG" class="medImg"></a>
+        <section class="ass-details">
+            <a href="files/AffinityDiagram.pdf"><h2>Affinity Diagram: Crowded Gym</h2></a>
+            <p>
+                As a team we brainstormed various aspects that will need to be addressed when solving the crowded gym issue.
+            </p>
+        </section>
+    </section>
+
+
+
+
 
     <center><a href= "https://jonahandrews.github.io/page1"><p>secret</p></a></center>
 </body>
