--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
         </section>
     </section>
 
+    <!-- Persona Assignment-->
+    <section class="assignment">
+        <a href="files/CS190PersonaFinal.pdf"><img src="images/PersonaPic.PNG" class="medImg"></a>
+        <section class="ass-details">
+            <a href="files/CS190PersonaFinal.pdf"><h2>Personna: 4 Personnas for Gym App</h2></a>
+            <p>
+                We compiled a list of typical users who would use our gym app.
+            </p>
+        </section>
+    </section>
 
 
 
