--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
         </section>
     </section>
 
+    <!-- Storyboard Assignment-->
+    <section class="assignment">
+        <a href="files/CS190StoryBoardFinal.pdf"><img src="images/StoryboardPic.PNG" class="medImg"></a>
+        <section class="ass-details">
+            <a href="files/CS190StoryBoardFinal.pdf"><h2>Storyboard: 4 Storyboards for our Personnas</h2></a>
+            <p>
+                We designed brief stories to birng our different personnas to life.
+            </p>
+        </section>
+    </section>
 
 
 
