--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
         </section>
     </section>
 
+    <!-- Sketch Assignment-->
+    <section class="assignment">
+        <a href="files/CS190AllSketches.pdf"><img src="images/SketchCoverPhoto.PNG" class="medImg"></a>
+        <section class="ass-details">
+            <a href="files/CS190AllSketches.pdf"><h2>Sketches</h2></a>
+            <p>
+                We drafted up various user interface designs for our app.
+            </p>
+        </section>
+    </section>
+
 
 
     <center><a href= "https://jonahandrews.github.io/page1"><p>secret</p></a></center>
