--- a/index.html
+++ b/index.html
@@ -14,62 +14,65 @@
 <body>
 
     <center><h1 class= "title">Jonah Andrews CS190 Website</h1></center>
+    <div class="assignments">
 
-    <!-- Problem Statement Assignment-->
-    <section class="assignment">
-        <a href="files/ProblemStatement.pdf"><img src="images/ProblemStatement1.PNG" class="medImg"></a>
-        <section class="ass-details">
+        <!-- Problem Statement Assignment-->
+        <section class="assignment">
             <a href="files/ProblemStatement.pdf"><h2>Problem Statement: Crowded Gym</h2></a>
+            <a href="files/ProblemStatement.pdf"><img src="images/ProblemStatement1.PNG" class="medImg"></a>
             <p>
                 The Strom Thurmond Wellness Center can become super crowded at times, making it difficult for students to exercise feasibly.
             </p>
+            
         </section>
-    </section>
 
-    <!-- Affinity Diagram Assignmnet-->
-    <section class="assignment">
-        <a href="files/AffinityDiagram.pdf"><img src="images/AffinityDiagram1.PNG" class="medImg"></a>
-        <section class="ass-details">
+        <!-- Affinity Diagram Assignmnet-->
+        <section class="assignment">
             <a href="files/AffinityDiagram.pdf"><h2>Affinity Diagram: Crowded Gym</h2></a>
+            <a href="files/AffinityDiagram.pdf"><img src="images/AffinityDiagram1.PNG" class="medImg"></a>
             <p>
                 As a team we brainstormed various aspects that will need to be addressed when solving the crowded gym issue.
             </p>
+            
         </section>
-    </section>
 
-    <!-- Persona Assignment-->
-    <section class="assignment">
-        <a href="files/CS190PersonaFinal.pdf"><img src="images/PersonaPic.PNG" class="medImg"></a>
-        <section class="ass-details">
+        <!-- Persona Assignment-->
+        <section class="assignment">
             <a href="files/CS190PersonaFinal.pdf"><h2>Personna: 4 Personnas for Gym App</h2></a>
+            <a href="files/CS190PersonaFinal.pdf"><img src="images/PersonaPic.PNG" class="medImg"></a>
             <p>
                 We compiled a list of typical users who would use our gym app.
             </p>
         </section>
-    </section>
 
-    <!-- Storyboard Assignment-->
-    <section class="assignment">
-        <a href="files/CS190StoryBoardFinal.pdf"><img src="images/StoryboardPic.PNG" class="medImg"></a>
-        <section class="ass-details">
+        <!-- Storyboard Assignment-->
+        <section class="assignment">
             <a href="files/CS190StoryBoardFinal.pdf"><h2>Storyboard: 4 Storyboards for our Personnas</h2></a>
+            <a href="files/CS190StoryBoardFinal.pdf"><img src="images/StoryboardPic.PNG" class="medImg"></a>
             <p>
                 We designed brief stories to birng our different personnas to life.
             </p>
         </section>
-    </section>
 
-    <!-- Sketch Assignment-->
-    <section class="assignment">
-        <a href="files/CS190AllSketches.pdf"><img src="images/SketchCoverPhoto.PNG" class="medImg"></a>
-        <section class="ass-details">
+        <!-- Sketch Assignment-->
+        <section class="assignment">
             <a href="files/CS190AllSketches.pdf"><h2>Sketches</h2></a>
+            <a href="files/CS190AllSketches.pdf"><img src="images/SketchCoverPhoto.PNG" class="medImg"></a>
             <p>
                 We drafted up various user interface designs for our app.
             </p>
         </section>
-    </section>
 
+        <!-- Paper Prototype-->
+        <section class="assignment">
+            <a href="https://youtu.be/qz6SEqi9Xnc"><h2>Paper Prototype</h2></a>
+            <a href="https://youtu.be/qz6SEqi9Xnc"><img src="images/PaperPrototypeCover.PNG" class="medImg"></a>
+            <p>
+                I put together a prototype that showcases how I envision our app's user interface working.
+            </p>
+        </section>
+
+    </div>
 
 
     <center><a href= "https://jonahandrews.github.io/page1"><p>secret</p></a></center>
