--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
             </p>
         </section>
 
+        <!-- Hi-Fi Prototype-->
+        <section class="assignment">
+            <a href="files/CS190GymTrackerAppHiFiPrototypeFinal/src/index.html"><h2>Hi-Fi Prototype</h2></a>
+            <a href="files/CS190GymTrackerAppHiFiPrototypeFinal/src/index.html"><img src="images/HiFiCoverPic.PNG" class="medImg"></a>
+            <p>
+                We assembled a working prototype for our Gym Tracker app that users can interact with.
+            </p>
+        </section>
+
     </div>
 
 
