--- a/page1.html
+++ b/page1.html
@@ -11,10 +11,21 @@
     
     <img src="images/Jonesy1.png" class="center">
 
+
+    <iframe src="files/MinonTest01Web/index.html" height="700" width="450" title="Minon"></iframe>
+
+
     <p>:)</p>
     <p>Download the future</p>
 
     <a href="files/app.apk">HERE</a>
+
+    <div class="bottom">
+
+        <h4>Contact Info</h4>
+        <p>Email: <a href="mailto: jonahia@email.sc.edu">jonahia@email.sc.edu</a> Instagram: <a href="https://www.instagram.com/jonah._.andrews/" target="_blank" rel="noopener noreferrer">@jonah._.andrews</a></p>
+
+    </div>
 
 </body>
 
