--- a/about.html
+++ b/about.html
@@ -18,6 +18,9 @@
         <a href="index.html"> Home </a>
         </li>  
         <li>  
+        <a href="blog.html"> Blog </a>
+        </li>  
+        <li>  
         <a href="projects.html"> Projects </a>  
         </li>  
         <li>  
@@ -27,7 +30,7 @@
         </li>  
         </ul> 
         </nav>  
-        </header>  
+    </header>   
 
     
     
