--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <a href="index.html"> Home </a>
             </li>  
             <li>  
+            <a href="blog.html"> Blog </a>
+            </li>  
+            <li>  
             <a href="projects.html"> Projects </a>  
             </li>  
             <li>  
@@ -74,6 +77,16 @@
             <a href="https://quoteideas.com/minion-quotes/"><img src="images/minonFunny01.jpg" class="medImg"></a>
             <p>
                 banana
+            </p>
+            
+        </section>
+
+         <!-- Story_04-->
+         <section class="story">
+            <a href="https://guide.michelin.com/us/en/article/features/8-surprising-facts-about-the-michelin-man"><h2>Michelin Man</h2></a>
+            <a href="https://www.youtube.com/watch?v=f0oM5xivl6Y"><img src="images/pillowMan01.jpg" class="medImg"></a>
+            <p>
+                Will answer for crimes soon 
             </p>
             
         </section>
