--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <center><h1 class= "title">Jonah Andrews</h1></center>
 
+    <!-- <img src="images/siteLogo01.JPG" class="logo"> -->
+
         <header>  
             <nav>  
             <ul> 
