--- a/about.html
+++ b/about.html
@@ -35,6 +35,7 @@
     
     
     <p class="start_index">just a dude...</p>
+    <a href="files/FreshmanResume6.pdf"<p class="start_index">Resume</p></a>
 
     <div class="bottom">
 
