--- a/about.html
+++ b/about.html
@@ -34,8 +34,9 @@
 
     
     
-    <p class="start_index">just a dude...</p>
-    <a href="files/SophmoreResume01.pdf"<p class="start_index">Resume</p></a>
+    <!--<p class="start_index">just a dude...</p>-->
+    <a href="files/JonahAndrewsResume2025A"<p class="start_index">My Resume</p></a>
+    <img src = "JonahResumePic01"></img>
 
     <div class="bottom">
 
