--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
     
     
     <!--<p class="start_index">just a dude...</p>-->
-    <a href="files/JonahAndrewsResume2025A"<p class="start_index">My Resume</p></a>
-    <img src = "JonahResumePic01"></img>
+    <a href="files/JonahAndrewsResume2025A.pdf"<p class="start_index">My Resume</p></a>
+    <img src = "JonahResumePic01.png"></img>
 
     <div class="bottom">
 
