--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     
     <!--<p class="start_index">just a dude...</p>-->
     <a href="files/JonahAndrewsResume2025A.pdf"<p class="start_index">My Resume</p></a>
-    <img src = "JonahResumePic01.png"></img>
+    <img src = "images/JonahResumePic01.png"></img>
 
     <div class="bottom">
 
